test/compile_errors/binary_schema_duplicate_names.zig
const fits = @import("zigfitsio");

comptime {
    _ = fits.BinarySchema(&.{
        .{ .name = "FLUX", .tform = "1E" },
        .{ .name = "flux", .tform = "1D" },
    });
}
